--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.parent-container {
+    display: grid;
+    place-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.insert-todo {
+    margin-top: 100px;
+    display: flex;
+    place-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.new-todo-text-field {
+    width: 300px;
+    height: 50px;
+    font-size: 30px;
+    margin-right: 20px;
+    padding: 5px 30px;
+    border: none;
+    background-color: #dadada;
+    border-radius: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todos-title {
+    font-size: 50px;
+    margin: 50px 0px 30px 0px;
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.all-done-title {
+    font-size: 20px;
+    margin: 30px 0px;
+    text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.message {
+    position: fixed;
+    bottom: 40px;
+    font-size: 20px;
+    background-color: #F3F1F5;
+    padding: 20px;
+    border-radius: 50px;
 }
